fix(frontend): alignment with chrome
[skip ci pytest]

--- a/frontend/src/component/Activity/ContentActivityHeader.styl
+++ b/frontend/src/component/Activity/ContentActivityHeader.styl
@@ -20,6 +20,9 @@
   &__right
     margin-left 10px
     text-align right
+    align-items flex-end
+    display flex
+    flex-direction column
 
   & .breadcrumbs
     position relative
